Hoa 200825 - Fix report

--- a/.vscode/ReportLayouts/Rep.70013.MGPMonthlyReport.rdl
+++ b/.vscode/ReportLayouts/Rep.70013.MGPMonthlyReport.rdl
@@ -11,7 +11,7 @@
       <am:Name>MSRB</am:Name>
       <am:Version>15.1.20318.47</am:Version>
     </am:UpdatedBy>
-    <am:LastModifiedTimestamp>2025-06-04T04:50:16.4052154Z</am:LastModifiedTimestamp>
+    <am:LastModifiedTimestamp>2025-08-14T09:46:57.8389806Z</am:LastModifiedTimestamp>
   </am:AuthoringMetadata>
   <AutoRefresh>0</AutoRefresh>
   <DataSources>
@@ -2409,7 +2409,7 @@ Gross Profit</Value>
                               <Paragraph>
                                 <TextRuns>
                                   <TextRun>
-                                    <Value />
+                                    <Value>a</Value>
                                     <Style>
                                       <FontSize>7pt</FontSize>
                                       <FontWeight>Bold</FontWeight>
